syntax = "proto3";

package payment;

service PaymentService {
    rpc CreateCharge(Charge) returns (Charge) {}
    rpc CreateCustomer(Customer) returns (Customer) {}
}

message Charge {
    string id = 1;
    int64 amount = 2;
    string currency = 3;
    string description = 4;
    string customer = 5;
    string user_id = 6;
    string token = 7;
}

message Customer {
    string id = 1;
    string email = 2;
    string token = 3;
}

message Transaction {
    string id = 1;
    string user_id = 2;
    string charge_id = 3;
    int64 amount = 4;
    string currency = 5;
    string description = 6;
    string idempotency_key = 7;
}

message Error {
    int32 code = 1;
    string description = 2;
}

message Response {
    Customer customer = 1;
    Charge charge = 2;
    Error errors = 3;
}